2013-03-01: Add collection of several extended metadata items.

2014-01-22: Initial provisions for optionally gathering extended metadata on test runs.

2014-01-19: Add detection of supported netperf options and support passing -e to
            netperf for UDP_RR socket timeout (adds --socket-timeout parameter).

2014-01-18: Add rrul_be test using exclusively BE traffic.

2013-12-25: Don't crash on empty values in CDF plots.

2013-11-25: Release v0.6.1.

2013-11-25: Fix module rewrite in setup.py and numpy version output in --version.

2013-11-25: Release v0.6.0.

2013-10-31: Adjust spacing for title and annotation to work better with exported plots.

2013-09-27: Add description of output formats to man page.

2013-09-27: Add the --note argument to store arbitrary notes in the JSON metadata.

2013-09-27: Print custom title on separate line on plots.

2013-09-26: Add man page.

2013-09-25: Allow passing of data filenames and host names as unqualified arguments
            and attempt to guess what each argument is.

2013-09-25: Add matplotlib version to --version output.

2013-04-20: Manual removal of temporary files to get around issues on cygwin.

2013-04-18: Print Python version along with netperf version on -V.

2013-04-18: Fix python3.1 compatibility bug in gzip workaround.

2013-04-15: Release v0.5.6.

2013-04-15: Add rrul_noclassification test.

2013-04-15: Release v0.5.5.

2013-04-15: Add work-around for python2.6 version of GzipFile.

2013-04-15: Add option to disable automatic log-scaling of graphs.

2013-03-27: Add -z option to start y-axis at zero.

2013-03-27: Don't use suptitle() to draw annotation at the bottom of the plots (makes
            the annotation work in matplotlib 1.2.1).

2013-03-27: Release v0.5.3.

2013-03-27: Fix install bug in setup.py when creating packages.

2013-03-27: Release v0.5.2.

2013-03-26: Actually get the return code of a subprocess.

2013-03-26: Fix bug on aborting tests due to missing kill() stub for computing runners.
